# DriftExplorer

./: LICENSE  README.md  pyproject.toml
src/drift_explorer/: __init__.py  __main__.py  animation.py  custom_widgets.py  gui.py  mainwindow.py  mainwindow.ui  matplotlib_widget.py  solver.py
tests/: test_integrator.py
